<?xml version="1.0" encoding="utf-8" standalone="no"?>
<resources>

    <string name="app_name">AntiTheft</string>
    <string name="anti_theft_hint">You need anti-theft</string>
    <string name="anti_theft_hint_sub">Three step, you will have anti-theft!</string>
    <string name="app_summary">Anti Theft\u00a9 LeWaTek Limited.</string>
    <string name="label_next">Next</string>
    <string name="label_back">Back</string>
    <string name="label_complete">Finish</string>
    <string name="send">Send commands</string>
    <string name="unlock">Unlock</string>
    <string name="antitheft">Anti theft</string>
    <string name="start_instantly">Open right now</string>
    <string name="antiseft_settings">Anti-theft settings</string>
    <string name="iam">I am %s,</string>
    <string name="invalid_phone_number">Invalid mobile phone number</string>
    <string name="invalid_user_info">user info cannot be null</string>
    <string name="password_no_match">Incorrect password,please try again.</string>
    <string name="password_no_match_second">The passwords you entered are not the same. Please re-enter your password </string>
    <string name="remote_control">remote control</string>
    <string name="send_command">Send commands</string>
    <string name="change_settings">Settings</string>
    <string name="remember_commands">Commands</string>
    <string name="find_phone">Find your phone</string>
    <string name="find_phone_instantly">Search right now</string>
    <string name="remote_hint">You can send remote control commands to a phone which have anti-theft</string>
    <string name="remote_hint_find_phone">Find lost phone</string>
    <string name="remote_hint2">Function:lock phone and take picture,locate phone,delete data,password retake</string>
    <string name="remote_hint_select_command">Choose remote control commands</string>
    <string name="remote_prompt_phone_number">You need remote control your phone</string>
    <string name="remote_lock_phone_title">This will lock phone and take picture</string>
    <string name="remote_lock_phone_hint">If you send command to your lost phone, the phone\'s screen will be locked,and need password to unlock</string>
    <string name="remote_lock_phone_hint_sub">Warming:Your phone will need Front-facing camera.</string>
    <string name="remote_get_location_title">You choose locate phone command.</string>
    <string name="remote_get_location_hint">Send this command to your lost phone,and you will get the phone\'s location and map.</string>
    <string name="remote_get_location_hint_sub">Warming:Tracing phone location need the phone have signal.</string>
    <string name="remote_delete_data_title">This will delete  delete your data.</string>
    <string name="remote_delete_data_hint">Sending this command to your lost phone would delete phone data, including contacts info,messages</string>
    <string name="remote_delete_data_hint_sub">Notice:phone data will not be recover once it has been deleted.</string>
    <string name="remote_retrieve_password_title">You choose the retake password</string>
    <string name="remote_retrieve_password_hint">Send this command to lost phone, will send password to your phone.</string>
    <string name="remote_retrieve_password_hint_sub"></string>
    <string name="command_title">You can send these commands to your lost phone through any phone:</string>
    <string name="command_lock_phone">Lock phone</string>
    <string name="command_lock_phone_hint">Lock phone and take a picture for theft</string>
    <string name="command_lock_phone_hint_sub">#QQLock#Password</string>
    <string name="command_get_location">get location</string>
    <string name="command_get_location_hint_sub">#QQLocation#Password</string>
    <string name="command_delete_data">Delete data</string>
    <string name="command_delete_data_hint_sub">#QQDeleteAll#Password</string>
    <string name="command_retrieve_password_short">Password</string>
    <string name="command_retrieve_password">get password</string>
    <string name="command_retrieve_password_hint_sub">#QQPIN#Secure phone number</string>
    <string name="command_title_hint">You can send these commands to remote control your lost phone through any phone</string>
    <string name="prompt_input_phone_number">Please enter your lost phone number</string>
    <string name="prompt_input_password_lost">Please enter password</string>
    <string name="prompt_input_security_phone_number">Please enter secure phone number</string>
    <string name="prompt_select_commands">Please choose remote control command</string>
    <string name="title_have_turned_on">Anti-theft has been opened</string>

    <!-- preferences -->
    <string name="pref_sim_lock">pref_sim_lock</string>
    <string name="pref_sim_lock_title">detect sim card change</string>
    <string name="pref_sim_lock_summary">lock phone after changing sim card</string>
    <string name="pref_password">pref_password</string>
    <string name="pref_password_title">Password</string>
    <string name="pref_security_number">pref_security_number</string>
    <string name="pref_security_number_title">Secure phone number</string>
    <string name="save">Save</string>
    <string name="dialog_security_number_title">Set secure phone number</string>
    <string name="dialog_security_number">Secure phone number</string>
    <string name="dialog_security_number_hint">Recommend you use close person\'s number as secure phone number,and it can not be your number</string>
    <string name="dialog_security_number_change"><u>Change</u></string>
    <string name="dialog_close_title">Close anti-theft</string>
    <string name="dialog_close_message">System will close anti-theft</string>
    <string name="dialog_password_forget_title">Forget password</string>
    <string name="dialog_password_forget_text1">You phone will send password to secure phone through message.</string>
    <string name="dialog_password_forget_text2">Your password has been sent to secure phone. </string>
    <string name="dialog_password_forget_text3">Your password has failed to send to secure phone </string>
    <string name="dialog_remember_commands_title">Back up anti-theft commands</string>
    <string name="dialog_remember_commands_text1">System will send anti-theft commands to secure phone by message.</string>
    <string name="dialog_remember_commands_text2">Your commands has been sent to secure phone. </string>
    <string name="dialog_command_sent_title">Success!</string>
    <string name="dialog_command_sent_text">Success!</string>
    <string name="password_forget"><u>Forget password</u></string>
    <string name="password_old">Former password</string>
    <string name="password_new">New password</string>
    <string name="password_confirm">Comfirm new password</string>
    <string name="password_confirm_hint">Enter new password again</string>
    <string name="password_title">Change password</string>
    <string name="password_show">Show password</string>
    <string name="password_format">Please enter 4 to 16 digtal or character as password</string>
    <string name="password_step_title">1.Set password</string>
    <string name="password_step_title_sub">It used to enter anti-thfet,remote control and unlock phone function.</string>
    <string name="password_digits">abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ0123456789</string>
    <string name="password_got">Successfully retake password，and it is%s</string>
    <string name="security_number_step_title">2.Secure phone number</string>
    <string name="security_number_step_title_sub">It used to retake password and get recent phone number which lost phone use.</string>
    <string name="security_number_edit_hint">Recommend you use close person\'s number as secure phone number,and it can not be your number.</string>
    <string name="user_info_step_title">3.Urgent message</string>
    <string name="user_info_step_title_sub">Send message to secure phone when sim card change.</string>
    <string name="user_info_inner_hint1">I am</string>
    <string name="user_info_inner_hint2">This message notice you that your cell phone may be stolened.</string>
    <string name="complete_step_title">Finish anti-theft setting</string>
    <string name="complete_step_title_sub">Congratulations, anti-theft has been started!</string>
    <string name="complete_send_to_security_number">Send commands to secure phone.</string>
    <string name="complete_send_to_security_number_hint"> Recommend you send commands to secure phone in case of forgeting commands.</string>
    <string name="sim_change_message">Warming:your sim card has been changed.</string>
    <string name="choose_contacts">Choose contact</string>
    <string name="tips4_deleting_data_success">Data has been deleted</string>
    <string name="tips4_locate_success">Successfully locate your phone,it is in:</string>
    <string name="tips4_locate_failed">Lost phone can not open GPS, and fail to locate phone.</string>
    <string name="tips4_lock_phone_success">Your phone has been locked</string>
    <string name="tips4_get_password_failed">Your secure phone number is wrong,fail to retake password.</string>
    <string name="tips4_password_error">Your password is wrong,please try again.</string>
    <string name="tecent">Technical support by Tencent mobile phone housekeeping </string>
    <string name="all_commands_hint">I\'m using anti-theft function, please help me save romote control commands,#QQDeleteAll#password delete data，#QQLock#password lock phone，#QQLocate#password locate phone，#QQPIN#secure phone number find back password</string>
    <string name="input_antitheft_password">Please enter password</string>
    <string name="prompt_insert_sim">Please insert sim card</string>
    <string name="command_not_none">Command can not be null</string>
    <string name="prompt_user_info_hint">input your name</string>
    <string name="prompt_close_guide">Are you sure to exit the guide?</string>
    <string name="pref_antitheft_on_title">turn on antitheft</string>
    <string name="pref_antitheft_on">pref_antitheft_on</string>
    <string name="at">location is</string>
    <string name="password_changed＿success">The password has been changed</string>
    <string name="security_number_changed＿success">The secure number has been changed</string>

</resources>