<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >

    <SwitchPreference
        android:key="@string/pref_antitheft_on"
        android:persistent="false"
        android:title="@string/pref_antitheft_on_title" />

    <!--  -->

    <PreferenceCategory android:title="@string/antiseft_settings" >
        <SwitchPreference
            android:key="@string/pref_sim_lock"
            android:persistent="false"
            android:summary="@string/pref_sim_lock_summary"
            android:title="@string/pref_sim_lock_title" />

        <Preference
            android:widgetLayout="@null"
            android:key="@string/pref_password"
            android:persistent="false"
            android:title="@string/pref_password_title" />
        <Preference
            android:widgetLayout="@null"
            android:key="@string/pref_security_number"
            android:persistent="false"
            android:title="@string/pref_security_number_title" />
    </PreferenceCategory>

</PreferenceScreen>
