<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content" >

    <TextView
        android:id="@+id/textView1"
        style="@style/CheckText"
        android:layout_alignParentTop="true"
        android:text="@string/command_lock_phone" />

    <CheckBox
        android:id="@+id/checkLockPhone"
        style="@style/CheckBox"
        android:layout_alignBaseline="@id/textView1"
        android:layout_toRightOf="@id/textView1" />

    <TextView
        android:id="@+id/textView2"
        style="@style/CheckText"
        android:layout_below="@id/textView1"
        android:text="@string/command_get_location" />

    <CheckBox
        android:id="@+id/checkGetLocation"
        style="@style/CheckBox"
        android:layout_alignBaseline="@id/textView2"
        android:layout_toRightOf="@id/textView2" />

    <TextView
        android:id="@+id/textView3"
        style="@style/CheckText"
        android:layout_below="@id/textView2"
        android:text="@string/command_delete_data" />

    <CheckBox
        android:id="@+id/checkDeleteData"
        style="@style/CheckBox"
        android:layout_alignBaseline="@id/textView3"
        android:layout_toRightOf="@id/textView3" />

    <TextView
        android:id="@+id/textView4"
        style="@style/CheckText"
        android:layout_below="@id/textView3"
        android:text="@string/command_retrieve_password" />

    <CheckBox
        android:id="@+id/checkRetrievePassword"
        style="@style/CheckBox"
        android:layout_alignBaseline="@id/textView4"
        android:layout_toRightOf="@id/textView4" />

</RelativeLayout>