<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:paddingBottom="@dimen/fragment_padding"
    android:paddingLeft="@dimen/fragment_padding"
    android:paddingRight="@dimen/fragment_padding"
    android:paddingTop="@dimen/fragment_padding"
    android:scrollbarStyle="outsideOverlay" >

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center" >

        <TextView
            android:id="@+id/textView1"
            style="@style/Text.Medium.Black"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:text="@string/password_old" />

        <EditText
            android:id="@+id/edit1"
            style="@style/Password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textView1"
            android:layout_centerHorizontal="true"
            android:ems="10" >

            <requestFocus />
        </EditText>

        <com.lewa.antitheft.mainui.LinkedText
            android:id="@+id/textHint1"
            style="@style/Text.Small.Blue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/edit1"
            android:layout_marginBottom="20dp"
            android:text="@string/password_forget" />

        <TextView
            android:id="@+id/textView2"
            style="@style/Text.Medium.Black"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textHint1"
            android:text="@string/password_new" />

        <EditText
            android:id="@+id/edit2"
            style="@style/Password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textView2"
            android:layout_centerHorizontal="true"
            android:ems="10" >
        </EditText>

        <TextView
            android:id="@+id/textHint2"
            style="@style/Text.Small.Gray"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/edit2"
            android:layout_marginBottom="20dp"
            android:text="@string/password_format" />

        <TextView
            android:id="@+id/textView3"
            style="@style/Text.Medium.Black"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textHint2"
            android:text="@string/password_confirm" />

        <EditText
            android:id="@+id/edit3"
            style="@style/Password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textView3"
            android:layout_centerHorizontal="true"
            android:ems="10" >
        </EditText>

        <TextView
            android:id="@+id/textHint3"
            style="@style/Text.Small.Gray"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/edit3"
            android:text="@string/password_confirm_hint" />

        <CheckBox
            android:id="@+id/checkShowPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textHint3"
            android:text="@string/password_show" />
    </RelativeLayout>

</ScrollView>