<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="@dimen/fragment_padding"
    android:paddingRight="@dimen/fragment_padding" >

    <TextView
        android:id="@+id/textHint1"
        style="@style/Text.Small.Black"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:text="@string/remote_hint" />

    <TextView
        android:id="@+id/textSelectCommand"
        style="@style/Text.Medium.Blue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@id/textHint1"
        android:layout_marginTop="@dimen/item_margin"
        android:text="@string/remote_hint_select_command" />

    <View
        android:id="@+id/dividerSelectCommand"
        style="@style/divider"
        android:layout_below="@id/textSelectCommand" />

    <GridLayout
        android:id="@+id/selectCommand"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/dividerSelectCommand"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/item_margin"
        android:columnCount="2"
        android:rowCount="2" >

        <RelativeLayout
            android:id="@+id/button_lock_phone"
            style="@style/Button.Big"
            android:layout_column="0"
            android:layout_row="0" >

            <ImageView
                android:id="@+id/icon_lock_phone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:src="@drawable/lock_phone" />

            <TextView
                android:id="@+id/text_lock_phone"
                style="@style/Text.Small.Black"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/icon_lock_phone"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="@dimen/item_margin"
                android:text="@string/command_lock_phone" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/button_get_location"
            style="@style/Button.Big"
            android:layout_column="1"
            android:layout_row="0" >

            <ImageView
                android:id="@+id/icon_get_location"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:src="@drawable/get_location" />

            <TextView
                android:id="@+id/text_get_location"
                style="@style/Text.Small.Black"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/icon_get_location"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="@dimen/item_margin"
                android:text="@string/command_get_location" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/button_delete_data"
            style="@style/Button.Big"
            android:layout_column="0"
            android:layout_row="1" >

            <ImageView
                android:id="@+id/icon_delete_data"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:src="@drawable/delete_data" />

            <TextView
                android:id="@+id/text_delete_data"
                style="@style/Text.Small.Black"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/icon_delete_data"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="@dimen/item_margin"
                android:text="@string/command_delete_data" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/button_retrieve_password"
            style="@style/Button.Big"
            android:layout_column="1"
            android:layout_row="1"
            android:text="@string/command_retrieve_password" >

            <ImageView
                android:id="@+id/icon_retrieve_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:src="@drawable/retrieve_password" />

            <TextView
                android:id="@+id/text_retrieve_password"
                style="@style/Text.Small.Black"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/icon_retrieve_password"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="@dimen/item_margin"
                android:text="@string/command_retrieve_password_short" />
        </RelativeLayout>
    </GridLayout>

    <TextView
        android:id="@+id/textFindPhone"
        style="@style/Text.Medium.Blue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@id/selectCommand"
        android:text="@string/remote_hint_find_phone" />

    <LinearLayout
        android:id="@+id/dividerFindPhone"
        style="@style/divider"
        android:layout_below="@id/textFindPhone" />

    <TextView
        android:id="@+id/textHintFindPhone"
        style="@style/Text.Small.Black"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/dividerFindPhone"
        android:text="@string/remote_hint2" />

    <Button
        android:id="@+id/buttonFindPhone"
        style="@style/Button.Blue.One"
        android:layout_below="@id/textHintFindPhone"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/item_margin_button"
        android:text="@string/find_phone_instantly" />

    <include
        android:id="@+id/tencent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        layout="@layout/tencent" >
    </include>

</RelativeLayout>