<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="@dimen/item_margin"
    android:background="@drawable/cvsn_bg_right_blue"
    android:padding="@dimen/item_margin_middle" >

    <EditText
        android:id="@+id/editUserInfo"
        style="@style/Edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_marginLeft="@dimen/i_am_width"
        android:ems="10"
        android:hint="@string/prompt_user_info_hint" >

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/textView1"
        style="@style/Text.Small.Black"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@id/editUserInfo"
        android:layout_alignParentLeft="true"
        android:layout_marginTop="@dimen/item_margin_small"
        android:text="@string/user_info_inner_hint1" />
    <!-- android:layout_alignBaseline="@id/textView1" -->

    <TextView
        android:id="@+id/textView2"
        style="@style/Text.Small.Black"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/editUserInfo"
        android:text="@string/user_info_inner_hint2" />

</RelativeLayout>