<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/fragment_padding"
    android:paddingRight="@dimen/fragment_padding" >

    <RelativeLayout
        android:id="@+id/hint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:padding="@dimen/item_padding" >
    </RelativeLayout>

    <TextView
        android:id="@+id/textTitle2"
        style="@style/Text.Medium.Blue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/hint"
        android:layout_marginTop="@dimen/item_margin"
        android:text="@string/remote_prompt_phone_number" />

    <View
        android:id="@+id/divider2"
        style="@style/divider"
        android:layout_below="@id/textTitle2"
        android:layout_marginBottom="@dimen/item_margin" />

    <LinearLayout
        android:id="@+id/panelPhoneNumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/divider2"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/phoneNumberHint"
            style="@style/Text.Small.Black"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/prompt_input_phone_number" />

        <EditText
            android:id="@+id/phoneNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="phone" >

            <requestFocus />
        </EditText>
    </LinearLayout>

    <TextView
        android:id="@+id/textSelectCommands"
        style="@style/Text.Small.Black"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/panelPhoneNumber"
        android:layout_marginTop="@dimen/item_margin"
        android:text="@string/prompt_select_commands" />

    <Button
        android:id="@+id/SelectCommands"
        style="@lewa:style/V5spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textSelectCommands"
        android:background="@drawable/account_position_bg"
        android:focusable="true"
        android:gravity="left|center_vertical"
        android:text="@string/command_lock_phone" />

    <LinearLayout
        android:id="@+id/panelsecurityPhone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/SelectCommands"
        android:orientation="vertical"
        android:visibility="visible" >

        <TextView
            android:id="@+id/textView3"
            style="@style/Text.Small.Black"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/prompt_input_security_phone_number" />

        <EditText
            android:id="@+id/securityNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="phone" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/panelPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/panelsecurityPhone"
        android:orientation="vertical"
        android:visibility="visible" >

        <TextView
            android:id="@+id/textView2"
            style="@style/Text.Small.Black"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/prompt_input_password_lost" />

        <EditText
            android:id="@+id/password"
            style="@style/Password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10" />
    </LinearLayout>

</RelativeLayout>